--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Welcome!</title>
-    <link type="text/css" rel="stylesheet" href="https://github.com/zhurauljou/testproject/blob/master/style.css">
+    <link type="text/css" rel="stylesheet" href="testproject/style.css">
   </head>
   <body>
   <p>345834059034</p>
