--- a/First.html
+++ b/First.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Welcome!</title>
-    <link type="text/css" rel="stylesheet" href="testproject/style.css">
+    <link type="text/css" rel="stylesheet" href="/style.css">
   </head>
   <body>
   <div class="cloud"></div>
