--- a/index.html
+++ b/index.html
@@ -2,14 +2,71 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Welcome!</title>
-    <link type="text/css" rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:100,300,400,600,800,900" rel="stylesheet">
+    <title></title>
   </head>
   <body>
-  <p>345834059034</p>
-  <div class="cloud"></div>
-  <div class="cloud" style="margin-left:30px;"></div>
-  <div class="cloud" style="margin-right:70px;"></div>
-  <div class="grass"></div>
+    <nav class="Menu">
+      <a href="#" class="logo_apple"></a>
+      <div class="menupanel">
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">History</a>
+        <a href="#">Contact</a>
+      </div>
+    </nav>
+    <div class="hero">
+      <div class="iPhoneXs"></div>
+      <h1>Welcome to the<br>big screens.</h1>
+      <a href="#">Learn more ></a>
+      <a href="#">Buy ></a>
+      <div class="iphoneImage"></div>
+    </div>
+
+    <div class="grid-container">
+      <div class="wide">
+        <div class="left-image"></div>
+        <div class="right-text">
+          <h1>Compare iPhone models</h1>
+          <a href="#">Find the iPhone that's right for you ></a>
+        </div>
+      </div>
+
+      <div class="half-a">
+        <div class="text-a">
+          <h1>The easiest way to upgrade to the latest iPhone.</h1>
+          <p>Join the iPhone Upgrade Program to get the latest iPhone every year,
+          low monthly payments, and AppleCare+.*</p>
+          <a href="#">Learn more about iPhone Upgrade Program ></a>
+        </div>
+        <div class="image-a"></div>
+      </div>
+
+      <div class="half-b">
+        <div class="text-a">
+        <h1>Trade in your smartphone for credit.</h1>
+        <p>With Apple GiveBack, you can trade in your eligible smartphone and get up to $500
+          toward a new iPhone.** It’s good for you and the planet.</p>
+        <a href="#">See how it works ></a>
+        </div>
+        <div class="image-b"></div>
+      </div>
+    </div>
+
+    <div class="market-container">
+      <div class="a">
+        <div class="img-a"></div>
+        <h3>Free next-day delivery</h3>
+        <p>Choose free delivery or pick up available items at an Apple Store.</p>
+        <a href="#">Learn more ></a>
+      </div>
+      <div class="b">
+        <div class="img-b"></div>
+        <h3>Personal Setup</h3>
+        <p>We’ll show you how to get the most out of your new iPhone, online or in store.</p>
+        <a href="#">Learn more ></a>
+      </div>
+    </div>
   </body>
 </html>
