--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="testproject/style.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100,300,400,600,800,900" rel="stylesheet">
     <link rel="shortcut icon" type="image/png" href="http://icons-for-free.com/icon/download-apple_icon-477430.png"/>
     <title>Apple</title>
